--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@aptos-labs/ts-sdk": "^2.0.0",
+    "@google/generative-ai": "^0.24.1",
+    "@mapbox/mapbox-gl-geocoder": "^5.1.2",
     "@privy-io/react-auth": "^3.7.0",
     "@siren/blockchain": "workspace:*",
     "@tanstack/react-query": "^5.56.2",
@@ -20,7 +22,9 @@
     "@trpc/react-query": "11.0.0-rc.532",
     "@trpc/server": "11.0.0-rc.532",
     "@vercel/postgres": "^0.10.0",
+    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.33.0",
+    "mapbox-gl": "^3.17.0",
     "next": "16.1.1",
     "pg": "^8.16.3",
     "react": "19.2.3",
@@ -29,6 +33,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/mapbox-gl": "^3.4.1",
     "@types/node": "^20",
     "@types/pg": "^8.16.0",
     "@types/react": "^19",
