--- a/mobile/package.json
+++ b/mobile/package.json
@@ -26,6 +26,7 @@
     "drizzle-orm": "^0.33.0",
     "mapbox-gl": "^3.17.0",
     "next": "16.1.1",
+    "next-pwa": "^5.6.0",
     "pg": "^8.16.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
