--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "db:push": "cd mobile && pnpm db:push",
     "contracts:compile": "cd packages/contracts && movement move compile --named-addresses siren=default",
     "contracts:test": "cd packages/contracts && movement move test",
-    "contracts:publish": "cd packages/contracts && movement move publish --named-addresses siren=default --network testnet"
+    "contracts:publish": "cd packages/contracts && movement move publish --named-addresses siren=default --network testnet",
+    "generate-audio": "node generate-audio.js"
   },
   "devDependencies": {
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "dotenv": "^16.4.0"
   }
 }
