fix: issue init_profile exists, audio tts

--- a/mobile/public/manifest.json
+++ b/mobile/public/manifest.json
@@ -21,7 +21,7 @@
       "purpose": "maskable any"
     },
     {
-      "src": "/icons/icon-152x152.png",
+      "src": "/icons/icon-152x152.jpg",
       "sizes": "152x152",
       "type": "image/png",
       "purpose": "maskable any"
